--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
 			      <i class="fab fa-twitter"></i>
 			    </a>
 			  </li>
+			  <li>
+			    <a href="https://github.com/axLpre" target="_blank">
+			      <i class="fab fa-github"></i>
+			    </a>
+			  </li>
 			</ul>
 		</div>
 	</div>
