--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
 			<h2 class="title">Follow me</h2>
 			<ul class="logo-color" class="list-inline">
 			  <li>
-			    <a href="#">
+			    <a href="https://www.facebook.com/axel.prevoteaux.75" target="_blank">
 			      <i class="fab fa-facebook-f"></i>
 			    </a>
 			  </li>
 			  <li>
-			    <a href="#">
+			    <a href="https://www.linkedin.com/in/axel-pr%C3%A9voteaux-a2986918b/" target="_blank">
 			      <i class="fab fa-linkedin-in"></i>
 			    </a>
 			  </li>
