--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			    </a>
 			  </li>
 			  <li>
-			    <a href="#">
+			    <a href="https://twitter.com/PrevoteauxA">
 			      <i class="fab fa-twitter"></i>
 			    </a>
 			  </li>
