change title social

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		</div>
 
 		<div class="card-white">
-			<h2 class="title">Follow me</h2>
+			<h2 class="title">Social network</h2>
 			<ul class="logo-color" class="list-inline">
 			  <li>
 			    <a href="https://www.facebook.com/axel.prevoteaux.75" target="_blank">
