--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 	<div class="container">
 		<div class="card-white" id="introduction">
 			<h1>Programmer 🖥</h1>
-			<h2 id="color">Axel Prévoteaux 🎮</h2>
-			<img src="images/moi.jpg" alt="img-axl">
-				<p>Salut, je m'appelle <strong>Axel</strong> j'ai 25 ans, j'étais AVS (Auxiliaire de Vie Scolaire) pendant 3 ans. Fan de séries, films, animés et jeux vidéo. Je suis actuellement la formation <strong>Le Wagon</strong> pour devenir développeur web fullstack.
+			<h2 id="color">Axel Prévoteaux</h2>
+			<img src="images/axel.jpg" alt="profil-picture">
+				<p>Salut, je m'appelle <strong>Axel</strong> j'ai 25 ans, j'étais AVS (Auxiliaire de Vie Scolaire) pendant 3 ans. Fan de séries 📺 , films 🎥, animés 🗻 et jeux vidéo 🎮 . Je suis actuellement la formation <strong>Le Wagon </strong> pour devenir développeur web fullstack.
 				</p>
 			<a id="btn-color" href="https://www.lewagon.com/fr" target="_blank">Discover Le Wagon
 			</a>
