--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<img src="images/axel.jpg" alt="profil-picture">
 				<p>Salut, je m'appelle <strong>Axel</strong> j'ai 25 ans, j'étais AVS (Auxiliaire de Vie Scolaire) pendant 3 ans. Fan de séries 📺 , films 🎥, animés 🗻 et jeux vidéo 🎮 . Je suis actuellement la formation <strong>Le Wagon </strong> pour devenir développeur web fullstack.
 				</p>
-			<a id="btn-color" href="https://www.lewagon.com/fr" target="_blank">Discover Le Wagon
+			<a id="btn-color" href="https://play.google.com/store/apps/details?id=com.com2us.smon.normal.freefull.google.kr.android.common&hl=fr" target="_blank">Discover Summoners War: Sky Arena
 			</a>
 		</div>
 
